# EventRecorder

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: camera_settings.json
scripts/: calibrate_hot_pixels.sh  camera-bench.cpp  events-player.cpp  parse_hot_pixels.py  plot_event_rate.py
